--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,11 @@
+
 {
-  "rewrites":  [
-      {"source": "/(.*)", "destination": "/"}
+   "redirects": [
+     {
+       "source": "/",
+       "destination": "https://ecommerce-store-api.vercel.app",
+       "permanent": true
+     }
    ]
-}
+ }
+ 
